#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psocake
#------------------------------------------------------------------------

Package author: Chunhong "Chuck" Yoon

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-00
2016-01-28 Chunhong Yoon
- Outputs cxidb file compatible with CrystFEL
- Quantifier panel for jumping to events based on metric

Tag: V00-00-03
2016-01-24 Chunhong Yoon
- Displays coords x and y

Tag: V00-00-02
2015-11-18 Chunhong Yoon
- Works with the new detector interface, dettype

Tag: V00-00-01
2015-11-18 Chunhong Yoon
- just created this template file, this entry is an example of the change log
  entry
- keep it brief and easy to read
- always include author name and date of the change, provide CVS tag when 
  appropriate
